# discord-wiki-bot

./: .gitignore  config.example.json  pyproject.toml
wiki/: bot.py
